# AdventOfCode2021

./: .gitignore  CMakeLists.txt  README.md
solutions/: CMakeLists.txt  template.cpp
solutions/day_1/: CMakeLists.txt  day_1.cpp
solutions/day_10/: CMakeLists.txt  day_10.cpp
solutions/day_11/: CMakeLists.txt  day_11.cpp
solutions/day_12/: CMakeLists.txt  day_12.cpp
solutions/day_13/: CMakeLists.txt  day_13.cpp
solutions/day_14/: CMakeLists.txt  day_14.cpp
solutions/day_15/: CMakeLists.txt  day_15.cpp
solutions/day_16/: CMakeLists.txt  day_16.cpp
solutions/day_2/: CMakeLists.txt  day_2.cpp
solutions/day_3/: CMakeLists.txt  day_3.cpp
solutions/day_4/: CMakeLists.txt  day_4.cpp
solutions/day_5/: CMakeLists.txt  day_5.cpp
solutions/day_6/: CMakeLists.txt  day_6.cpp
solutions/day_7/: CMakeLists.txt  day_7.cpp
solutions/day_8/: CMakeLists.txt  day_8.cpp
solutions/day_9/: CMakeLists.txt  day_9.cpp
utility/: array2.hpp  utility.hpp  vector.hpp
